# nanodet

./: .gitignore  README.md  requirements.txt  setup.cfg
config/: nanodet-m-416-munin copy.yml  nanodet-m-416-munin-fg.yml  nanodet-m-416-munin.yml
demo_ncnn/: main.cpp
demo_openvino/: main.cpp
docs/source/_templates/: docstring.mustache
nanodet/data/dataset/: __init__.py  camodel_dataset.py
