[metadata]
version = 0.0.1
license_files = LICENSE

[tool.black]
line-length = 79

[flake8]
exclude = 
	.pytest,
	.tox,
	.venv,
	.vscode,
	.git/,
	__pycache__,
	docs/,
per-file-ignores = 
	*/__init__.py: F401,
max-complexity = 10
max-line-length = 79
extend-ignore = E203, W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 79

[tool.isort]
profile = "black"

[mypy]
files = 
	src/,
	tests/,
	examples/,
	*.py,
allow_redefinition = False
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
strict_optional = True
strict_equality = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True

[tool:pytest]
junit_suite_name = pytest_report.xml
testpaths = 
	tests
# addopts = 
#	-n auto
#	-vv
